# raspberry_pi_pico_hid

./: .gitmodules  CMakeLists.txt  README.md  tusb_config.h
resources/: raspberry-pi-pico-hid.rules  raspberry-pi-pico-hid.service
resources/scripts/: setup.sh
resources/server/: README.md  go.mod
resources/server/src/: main.go
resources/server/test/: test.js
scripts/: flash_raspbarry_pi_pico.sh
src/: hid_report.h  main.c  methode.h  pi_pico_data.h  pin.h  tb_6612_fng.h  usb_descriptors.c
